syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

package services.outbox.v1;

service OutboxService {
  rpc Subscribe (SubscribeRequest) returns (stream CalaLedgerEvent) {}
}

message SubscribeRequest {
  optional uint64 after_sequence = 1;
}

message CalaLedgerEvent {
  string id = 1;
  uint64 sequence = 2;
  google.protobuf.Timestamp recorded_at = 3;
  oneof payload {
    bool empty = 4;
    AccountCreated account_created = 5;
    JournalCreated journal_created = 6;
  }
}

enum DebitOrCredit {
  DEBIT = 0;
  CREDIT = 1;
}

enum Status {
  ACTIVE = 0;
  LOCKED = 1;
}

message AccountCreated {
  string data_source_id = 1;
  Account account = 2;
}

message Account {
  string id = 1;
  string code = 2;
  string name = 3;
  DebitOrCredit normal_balance_type = 4;
  Status status = 5;
  optional string external_id = 6;
  repeated string tags = 7;
  optional string description = 8;
  optional google.protobuf.Struct metadata = 9;
}

message JournalCreated {
  string data_source_id = 1;
  Journal journal = 2;
}

message Journal {
  string id = 1;
  string name = 2;
  Status status = 3;
  optional string external_id = 4;
  optional string description = 5;
}

